Make the sortarray name at least a bit more consistent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.0)
 
-project(sort_array)
+project(sortarray)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(sort_array src/sortarray.cpp)
+add_executable(sortarray src/sortarray.cpp)
